Added collapsible menu

--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="nav-wrapper">
 
 	<!-- Link around dots-wrapper added after tutorial video -->
@@ -11,9 +12,53 @@
 	
 
 	<ul id="navigation">
+		<h2  id="close-btn" style="text-align: center">X</h2>
 		<li><a href="{% url 'home' %}#contact">Contact</a></li>
 		{% if request.user.is_authenticated %}
 			<li><a href="{% url 'create_post' %}">Create Post</a></li>
 		{% endif %}
 	</ul>
+
+	<img id="menu-icon" src="{% static 'images/menu.png' %}">
+
 </div>
+
+
+<script type="text/javascript">
+	let menu = 'closed' 
+
+	let menuIcon = document.getElementById('menu-icon')
+	let navigation = document.getElementById('navigation')
+	let closeBtn = document.getElementById('close-btn')
+
+	menuIcon.addEventListener('click', toggleMenu)
+	closeBtn.addEventListener('click', toggleMenu)
+
+
+	function toggleMenu(){
+		if (menu == 'closed'){
+			navigation.style.display = 'block'
+			closeBtn.style.display = 'block'
+			menu = 'open'
+		}else{
+			navigation.style.display = 'none'
+			closeBtn.style.display = 'none'
+			menu = 'closed'
+		}
+	}
+
+	    
+	// Attaching the event listener function to window's resize event
+	
+	window.addEventListener("resize", function(){
+		let width = document.documentElement.clientWidth;
+		if(width > 1080){
+				navigation.style.display = 'block'
+		}else{
+				navigation.style.display = 'none'
+		}
+		menu = 'closed'
+		closeBtn.style.display = 'none'
+	});
+	
+</script>
