--- a/staticfiles/css/default.css
+++ b/staticfiles/css/default.css
@@ -163,6 +163,62 @@ h6 { font-size: 16px;}
 }
 
 
+/* DROP DOWN MENU START */
+
+#menu-icon{
+	width: 30px;
+	margin-right:10px;
+	cursor: pointer;
+	display: none;
+}
+
+#close-btn{
+	display: none;
+	cursor: pointer;
+	padding: 10px;
+	margin: 0;
+
+}
+
+
+@media screen and (max-width: 1080px){
+	#navigation{
+		display: none;
+		position: fixed;
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%);
+		border-radius: 0 0 5px 5px;
+		width: 95%;
+		background-color: var(--previewShadow);
+		padding: 0;
+		z-index:998;
+		border: 2px solid var(--borderColor);
+		-webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+		-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+		box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+	}
+
+	#navigation li{
+		box-sizing: border-box;
+		padding: 10px;
+		width: 100%;
+		border-top:2px solid var(--borderColor);
+			
+		font-size: 18px;
+		text-align: center;
+		margin:0;
+	}
+
+	#menu-icon{
+		display: block;
+	}
+
+}
+
+/* DROP DOWN MENU END */
+
+
 .left-column{
 	grid-area: left-column;
 	padding-top:50px;
