--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -15,7 +15,7 @@
 		<h2  id="close-btn" style="text-align: center">X</h2>
 		<li><a href="{% url 'home' %}#contact">Contact</a></li>
 		{% if request.user.is_authenticated %}
-			<li><a href="{% url 'account' %}">My Account</a></li>
+			<li><a href="{% url 'account' %}"> Account</a></li>
 			<li><a href="{% url 'logout' %}">Logout</a></li>
 		{% else %}
 			<li><a href="{% url 'login' %}">Login</a></li>
