Login user in and redirect after registration

--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -25,7 +25,7 @@
 
 		<h3 style="text-align: center">Register Account</h3>
 		<hr>
-		<form method="POST">
+		<form method="POST" action="?next={{ request.META.HTTP_REFERER }}">
 			{% csrf_token %}
 			{{form|crispy}}
 			<input class="btn btn-primary btn-lg btn-block" type="submit" value="Login">
