Solved error (clear thumbnail)

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -128,7 +128,13 @@
 				{% for post in posts %}
 				<div>
 					<div class="post">
-						<img class="thumbnail" src="{{post.thumbnail.url}}">
+					
+					{% if post.thumbnail %}
+						<img class="thumbnail" src="{{post.thumbnail.url}}" />
+					{% else %}
+						<img class="thumbnail" src={% static '/images/placeholder.png' %} />
+					{% endif %}
+
 						<div class="post-preview">
 							<h6 class="post-title">{{post.headline}}</h6>
 							<p class="post-intro">{{post.sub_headline}}</p>
